test/correct/ShowOfFunction.hs
data A = A (Int -> Int)

main = show (A id)
