test/typeerrors/Strategies/Useless.hs
(+++) :: Int -> Int -> Int
x +++ y = x + y
